tests/NormalTests/paczka1/fuzzy1/55243331.err
Error in line 1: dvmwzi S488 75,4
Error in line 22: A894 S777 62,6
Error in line 34: A894 S777 4,6
